--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "virge/core": "dev-master",
-        "virge/db": "dev-master"
+        "virge/cli-db": "dev-master"
     },
     "autoload": {
         "psr-4": {"Virge\\": "Virge/"}
