--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
     "name": "virge/orm",
     "require": {
-        "virge/core": "dev-master",
-        "virge/db": "dev-master"
+        "virge/core": "~1.0",
+        "virge/db": "~2.0"
     },
     "autoload": {
         "psr-4": {"Virge\\": "Virge/"}
